--- a/server/client/public/index.html
+++ b/server/client/public/index.html
@@ -27,6 +27,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  <h2>Project Q</h2>
   <div id="root"></div>
   <!--
       This HTML file is a template.
